--- a/kq_1/assets/strings.yaml
+++ b/kq_1/assets/strings.yaml
@@ -15,3 +15,10 @@ strings:
   13: "You pluck a plump, orange carrot from the ground."
   14: "They pose as immovable guards for King Edward's castle, and have frightened off numerous intruders."
   15: "These doors are strongly built to keep out unwanted visitors."
+  16: "You see a large, grey rock."
+  17: "After moving that rock once, even thinking about it should make you tired."
+  18: "With a heave and a ho, you manage to move the rock... revealing a dark hole underneath it."
+  19: "There is an intricately carved dagger in the hole."
+  20: "You reach into the hole and grasp the dagger, being careful not to cut yourself."
+  21: "There is nothing in this hole but dirt."
+  22: "There are numerous white birch trees reaching to the sky."
