--- a/kq_1/assets/assets.yaml
+++ b/kq_1/assets/assets.yaml
@@ -227,6 +227,7 @@ quads:
   tree_4: {'tex': 5, data: [0,194,64,138,0,0] }
   tree_5: { 'tex': 5, data: [81,237,60,58,0,0] }
   tree_6: { 'tex': 5, data: [80,195,98,36,0,0] }
+  tree_7: { 'tex': 5, data: [194,198,74,79,0,0] }
 
   castle_0: {'tex': 1, data: [208,167,70,137,0,0]}
   rock: {'tex': 5, data: [280,168,34,23,0,0]}
