--- a/kq_1/assets/strings.yaml
+++ b/kq_1/assets/strings.yaml
@@ -22,3 +22,7 @@ strings:
   20: "You reach into the hole and grasp the dagger, being careful not to cut yourself."
   21: "There is nothing in this hole but dirt."
   22: "There are numerous white birch trees reaching to the sky."
+  23: "This is a very large oak tree with branches stretching to the sky."
+  24: "You climb the tree."
+  25: "The golden egg is smooth and shiny."
+  26: "The golden egg is so heavy you almost drop it."
