--- a/kq_1/assets/rooms.yaml
+++ b/kq_1/assets/rooms.yaml
@@ -1,17 +1,33 @@
 templates:
   ITEM1: |
     pos: [ {{ x }}, {{ y }}, -1 ]
-    model: main/{{ model }}
+    {% if model is defined %}model: main/{{ model }} {% endif %}
     depth: 1
     {% if walk is defined %}walk: { 'poly': {{ walk }} } {% endif %}
+    {% if state is defined %}state: {{ state }} {% endif %}
     hotspot:
       {% if rect is defined %}
       rect: {{ rect }}
+      {% elif poly is defined %}
+      poly: {{ poly }}
       {% else %}      
       id: {{ model }}
       {% endif %}
+      {% if goto is defined %}goto: {{ goto }} {% endif %}
+      {% if dir is defined %}dir: {{ dir }} {% endif %}
       actions:
         look: [ 'message', { 'text': {{ look }} } ]
+        {% if take is defined %}use: ['take', {'item': {{ take[0] }}, 'ok': {{ take[1] }}, 'remove': {{ take[2] }} }]{% endif %}
+        {% if use is defined %}use: [ {{ use }} ]{% endif %}
+  NPC: |
+    pos: [ {{ x }}, {{ y }}, -1 ]
+    model: main/{{ model }}
+    depth: 1
+    npc:
+      walkarea: {{ walkarea }}
+      refresh: {{ refresh | default(1) }}
+      onRefresh: {{ onRefresh }}
+      onReach: {{ onReach }}
 #  ITEM2: |
 #    pos: [ {{ arg0 }}, {{ arg1 }}, 0]
 #    model: main/{{ arg2 }}
@@ -34,7 +50,7 @@ templates:
   ALLIGATOR: |
     pos: [{{ x | default(0) }}, {{ y }}, 0]
     model: main/alligator
-    script: move_alligator
+    #script: move_alligator
     hotspot:
       rect: [ 25, 10, 0.2, 0 ]
       actions:
@@ -82,7 +98,7 @@ templates:
       tag: goto
     user_data:
       room: {{ room }}
-      y: 116
+      y: {{ y | default(116) }}
       {% if x is defined %}x: {{ x }} {% endif %}
       dir: s
 size: &size [316, 166]
@@ -90,74 +106,57 @@ walk_all: &walk_all [0,0,316,0,316,166,0,166]
 #east: &east [311,0,316,0,316,166,311,166]
 
 rooms:
-#  castle_west:
-#    size: *size
-#    textures: [4]
-#    walkareas:
-#      - poly: [0,10,20,10,20,0,316,0,316,20,260,20,251,47,203,47,191,20,128,20,149,46,149,130,0,130,0,20]
-#    nodes:
-#      bg:
-#        pos: [ 0, 0, -1 ]
-#        model: main/bg_castle_west
-#      tree: ITEM1(8, 44, "tree_3", [23, 0, 54, 0, 52, 3, 26, 3], 0)
-#      door:
-#        model: main/door_castle           # castle door
-#        pos: [210,47,0]
-#        anim: closed
-#        hotspot:
-#          rect: [40,50]
-#          goto: [227, 43]
-#          dir: n
-#          actions:
-#            look: ['message', {text: 15}]
-#            use: ['toggle']
-#            walk: ['walk_door', {room: start}]
-#      flag1: ITEM2(228, 148, "flag-purple", 1)
-#      flag2: ITEM2(258, 149, "flag-yellow", 1)
-#      flag3: ITEM2(288, 149, "flag-cyan", 1)
-#      lion-left:
-#        hotspot:
-#          rect: [30,30]
-#          actions:
-#            look: [ 'message', { 'text': 14 } ]
-#        pos: [166,50,0]
-#      lion-right:
-#        hotspot:
-#          rect: [30,30]
-#          actions:
-#            look: [ 'message', { 'text': 14 } ]
-#        pos: [255,50,0]
-#      e: EAST("start", 10)
-#      n: NORTH("garden_west")
-#      w: WEST("rock")
-#  garden_west:
-#    size: *size
-#    textures: [3]
-#    walkareas:
-#      - poly: *walk_all
-#    nodes:
-#      bg:
-#        pos: [ 0, 0, -1 ]
-#        model: main/bg_garden_west
-#      wall:
-#        model: main/wall_garden_west
-#        depth: 1
-#        walk: { 'poly': [ 0,0,20,0,139,72,274,72,274,75,135,75,0,3 ] }
-#        hotspot:
-#          id: wall_garden_west
-#          actions:
-#            look: [ 'message', { 'text': 12 } ]
-#        pos: [44,35,0]
-#      patch:
-#        hotspot:
-#          poly: [86,29,316,29,316,100,194,100]
-#          goto: [ 255, 50 ]
-#          actions:
-#            look: [ 'message', { 'text': 11 } ]
-#            use: ['take', {'item': 'carrot', 'ok': 13}]
-#        depth: 1
-#      e: EAST("garden_east")
-#      s: SOUTH("castle_west", 50)
+  castle_west:
+    size: *size
+    textures: [4]
+    walkareas:
+      - poly: [0,10,20,10,20,0,316,0,316,20,260,20,251,47,203,47,191,20,128,20,149,46,149,130,0,130,0,20]
+    nodes:
+      bg:
+        pos: [ 0, 0, -1 ]
+        model: main/bg_castle_west
+      tree: ITEM1(x=8, y=44, model="tree_3", walk=[23, 0, 54, 0, 52, 3, 26, 3], look=0)
+      door:
+        model: main/door_castle           # castle door
+        pos: [210,47,0]
+        anim: closed
+        hotspot:
+          rect: [40,50]
+          goto: [227, 43]
+          dir: n
+          actions:
+            look: ['message', {text: 15}]
+            use: ['toggle']
+            walk: ['walk_door', {room: start}]
+      flag1: ITEM1(x=228, y=148, model="flag-purple", look=1, rect=[25,10])
+      flag2: ITEM1(x=258, y=149, model="flag-yellow", look=1, rect=[25,10])
+      flag3: ITEM1(x=288, y=149, model="flag-cyan", look=1, rect=[25,10])
+      lion-left: ITEM1(x=166, y=50, look=14, rect=[30, 30])
+      lion-right: ITEM1(x=255, y=50, look=14, rect=[30, 30])
+      e: EAST(room="start", y=10)
+      n: NORTH(room="garden_west")
+      w: WEST(room="rock")
+  garden_west:
+    size: *size
+    textures: [3]
+    walkareas:
+      - poly: *walk_all
+    nodes:
+      bg:
+        pos: [ 0, 0, -1 ]
+        model: main/bg_garden_west
+      wall: ITEM1(x=44, y=35, model='wall_garden_west', walk=[0,0,20,0,139,72,274,72,274,75,135,75,0,3], look=12)
+      patch:
+        hotspot:
+          poly: [86,29,316,29,316,100,194,100]
+          goto: [ 255, 50 ]
+          actions:
+            look: [ 'message', { 'text': 11 } ]
+            use: ['take', {'item': 'carrot', 'ok': 13}]
+        depth: 1
+      e: EAST(room="garden_east")
+      s: SOUTH(room="castle_west", x=50)
+      w: WEST(room="goldegg")
   garden_east:
     size: *size
     textures: [2]
@@ -170,96 +169,72 @@ rooms:
       tree1: ITEM1(x=190, y=110, model='tree_1', walk=[52, 0, 90, 0, 88,4, 54,4], look=0)
       tree2: ITEM1(x=92, y=124, model='tree_2', walk=[30,0,50,0,48,2,32,2], look=0)
       wall: ITEM1(x=0, y=35, model='wall_garden_east', walk=[ -1, 72, 161, 72, 282,0,300, 0, 300, 2, 170, 74, -1, 74 ], look=7)
-      patch:
-        hotspot:
-          poly: [0,25,250,25,162,100,0,100]
-          goto: [75, 50]
-          actions:
-            look: [ 'message', { 'text': 6 } ]
-            use: ['take', {'item': 'carrot', 'ok': 9}]
-        depth: 1
+      patch: ITEM1(x=0, y=0, poly=[0,25,250,25,162,100,0,100], goto=[75, 50], look=6, take=['carrot', 9, False])
       s: SOUTH(room="start", x=200)
       w: WEST(room="garden_west")
-#  treetop:
-#    size: *size
-#    textures: [7]
-#    walkareas:
-#      - poly: *walk_all
-#    nodes:
-#      bg:
-#        pos: [0,0,-1]
-#        model: main/bg_treetop
-#      egg: ITEM3(138, 81, 'egg', 25, 'egg', 26, [135, 73], 'n')
-#
-#
-#
-#
-#  goldegg:
-#    size: *size
-#    textures: [6]
-#    walkareas:
-#      - poly: *walk_all
-#    nodes:
-#      bg:
-#        pos: [0,0,-1]
-#        model: main/bg_egg
-#      tree1:
-#        pos: [130, 7, -1]
-#        model: main/tree_8
-#        depth: 1
-#        walk: {poly: [28,8,67,8,80,4,80,0,86,0,111,7,180,10,180,12,28,12]}
-#        hotspot:
-#          id: main/tree_8
-#          goto: [194,9]
-#          actions:
-#            look: [ 'message', { 'text': 23} ]
-#            use: [climb_tree]
-#      s: SOUTH("rock")
-#      e: EAST("garden_west")
-#  rock:
-#    size: *size
-#    textures: [5]
-#    walkareas:
-#      - poly: *walk_all
-#    nodes:
-#      bg:
-#        pos: [0,0,-1]
-#        model: main/bg_rock
-#      hole:
-#        pos: [245, 40, -1]    # hole
-#        hotspot:
-#          rect: [20, 10]
-#          goto: [ 252, 42 ]
-#
-#          priority: 1
-#          actions:
-#            look: ['message', { 'text': "{21 if 'dagger' in state.inventory else 19}"}]
-#            use: ['take', {'item': 'dagger', 'ok': 20}]
-#      rock:
-#        pos: [236, "{21 if item['moved'] else 33}", -1]
-#        model: main/rock
-#        depth: 1
-#        moved: False
-#        walk: {poly: [0,0,34,0,34,6,0,6]}
-#        hotspot:
-#          rect: [32,22]
-#          goto: [252, 42]
-#          priority: 0
-#          dir: s
-#          actions:
-#            look: [ 'message', { 'text': 16 } ]
-#            use: ['push_rock']
-#      tree1: ITEM1(0, 0, "tree_4", [0, 0, 54, 0, 54, 2, 0,2], 22)
-#      tree2: ITEM1(120, 108, "tree_5", [-2,0,44,0,42,4,0,4], 22)
-#      tree3: ITEM1(131, 71, "tree_6", [-2,0,100,0,98,2,0,2], 0)
-#      tree4: ITEM1(242, 87, "tree_7", [0,3,8,0,26,0,38,2,44,5,44,8,0,8], 22)
-#      n: NORTH("goldegg")
-#      e: EAST("castle_west")
-#
-#
-#
-#
+  # ------------------------------------------------
+  elf:
+    size: *size
+    textures: [8]
+    walkareas:
+      - poly: *walk_all
+      - poly: [0,0,240,0,224,5,209,32,206,42,173,57,173,62,186,71,256,102,256,120,0,120]
+    nodes:
+      bg:
+        pos: [0,0,-1]
+        model: main/bg_elf
+      elf: NPC(x=70,y=10, model='elf', onRefresh='random_move', onReach='suca', walkarea=1)
 
+  # ------------------------------------------------
+  treetop:
+    size: *size
+    textures: [7]
+    walkareas:
+      - poly: *walk_all
+    nodes:
+      bg:
+        pos: [0,0,-1]
+        model: main/bg_treetop
+      egg: ITEM1(x=138, y=81, model='egg', look=25, take=['egg', 26, True], goto=[135, 73], dir='n')
+      s: SOUTH(room="goldegg", x=175, y=41)
+
+
+
+  # ------------------------------------------------
+  goldegg:
+    size: *size
+    textures: [6]
+    walkareas:
+      - poly: *walk_all
+    nodes:
+      bg:
+        pos: [0,0,-1]
+        model: main/bg_egg
+      tree1: ITEM1(x=130, y=7, model='tree_8', goto=[194,9], dir="e", look=23, use="climb_tree", walk=[28,8,67,8,80,4,80,0,86,0,111,7,180,10,180,12,28,12])
+      s: SOUTH(room="rock")
+      e: EAST(room="garden_west")
+  # ------------------------------------------------
+  rock:
+    size: *size
+    textures: [5]
+    walkareas:
+      - poly: *walk_all
+    nodes:
+      bg:
+        pos: [0,0,-1]
+        model: main/bg_rock
+      hole: ITEM1(x=245, y=40, goto=[252, 42], dir="s", rect=[20,10], 
+        look="\"{21 if 'dagger' in state.inventory else 19}\"",
+        take=["dagger", 20, False])
+      rock: ITEM1(state=0, x=236,y="\"{21 if item['state']==1 else 33}\"",
+        model="rock", goto=[252, 42], dir="s", walk=[0,0,34,0,34,6,0,6], look=16, use="push_rock")
+      tree1: ITEM1(x=0, y=0, model="tree_4", walk=[0, 0, 54, 0, 54, 2, 0,2], look=22)
+      tree2: ITEM1(x=120, y=108, model="tree_5", walk=[-2,0,44,0,42,4,0,4], look=22)
+      tree3: ITEM1(x=131, y=71, model="tree_6", walk=[-2,0,100,0,98,2,0,2], look=0)
+      tree4: ITEM1(x=242, y=87, model="tree_7", walk=[0,3,8,0,26,0,38,2,44,5,44,8,0,8], look=22)
+      n: NORTH(room="goldegg")
+      e: EAST(room="castle_west")
+  # ------------------------------------------------
   start:
     size: *size
     textures: [1]
