--- a/kq_1/assets/strings.yaml
+++ b/kq_1/assets/strings.yaml
@@ -26,3 +26,7 @@ strings:
   24: "You climb the tree."
   25: "The golden egg is smooth and shiny."
   26: "The golden egg is so heavy you almost drop it."
+  27: "Wandering on the banks of the lake, you see a cute little elf."
+  28: "This is a small elf. He looks very friendly."
+  29: The elf, impressed by your friendliness, gives you a magic ring. "Kind person, know that once, only once, this ring will make you invisible," he says and then disappears.
+  30: Try to move a bit closer.
