--- a/kq_1/assets/assets.yaml
+++ b/kq_1/assets/assets.yaml
@@ -171,6 +171,21 @@ sprites:
       idle-e:
       idle-s:
       idle-n:
+  graham-swim:
+    tex: 0
+    data: [
+      223,1,26,11,12,0,
+      223,13,22,11,12,0,
+      223,25,24,10,12,0,
+      223,36,24,10,10,0]
+    ticks: 10
+    animations:
+      walk-e: [0,1,2,3]
+      idle-e:
+      walk-n:
+      idle-n:
+      walk-s:
+      idle-s:
   graham:
     tex: 0
     data: [
@@ -251,6 +266,12 @@ quads:
   tree_6: { 'tex': 5, data: [80,195,98,36,0,0] }
   tree_7: { 'tex': 5, data: [194,198,74,79,0,0] }
   tree_8: {tex: 6, data: [128, 168, 186, 159, 0, 0]}
+  tree_9: {tex: 8, data: [1,167,56,81,0,0]}
+  tree_10: {tex: 8, data: [63,167,54,72,0,0]}
+  tree_11: {tex: 8, data: [122,167,50,67,0,0]}
+  tree_12: {tex: 8, data: [174,167,36,51,0,0]}
+  tree_13: {tex: 8, data: [214,167,68,49,0,0]}
+  tree_14: {tex: 8, data: [290,168,20,25,0,0]}
 
   egg: {tex: 7, data: [1,167,27,17,0,0]}
   castle_0: {'tex': 1, data: [208,167,70,137,0,0]}
