--- a/kq_1/assets/rooms.yaml
+++ b/kq_1/assets/rooms.yaml
@@ -19,15 +19,34 @@ templates:
         look: [ 'message', { 'text': {{ look }} } ]
         {% if take is defined %}use: ['take', {'item': {{ take[0] }}, 'ok': {{ take[1] }}, 'remove': {{ take[2] }} }]{% endif %}
         {% if use is defined %}use: [ {{ use }} ]{% endif %}
+  SWIM: |
+     collider:
+       poly: {{ poly }}
+       flag: 2
+       mask: 1
+       tag: swim
   NPC: |
     pos: [ {{ x }}, {{ y }}, -1 ]
     model: main/{{ model }}
     depth: 1
+    hotspot:
+      rect: [ 25, 10, 0.2, 0 ]
+      actions:
+        look: [ 'message', { 'text': {{ look }} } ]
+        {% if talk is defined %}talk: [{{ talk }}]{% endif %}
     npc:
       walkarea: {{ walkarea }}
       refresh: {{ refresh | default(1) }}
       onRefresh: {{ onRefresh }}
-      onReach: {{ onReach }}
+      speed: {{ speed }}
+    {% if collider is defined %}
+    collider: 
+      flag: 2
+      mask: 1
+      tag: {{ tag }}
+      rect: {{ collider }}
+      on_player_hit: {{ on_player_hit }}
+    {% endif %}
 #  ITEM2: |
 #    pos: [ {{ arg0 }}, {{ arg1 }}, 0]
 #    model: main/{{ arg2 }}
@@ -104,7 +123,10 @@ templates:
 size: &size [316, 166]
 walk_all: &walk_all [0,0,316,0,316,166,0,166]
 #east: &east [311,0,316,0,316,166,311,166]
-
+items:
+  elf: NPC(x=70,y=10, model='elf', onRefresh='random_move', speed=50, refresh=10,
+    walkarea=1, collider=[8, 2, 0.5, 0], tag='elf', on_player_hit="TestResponse", look=28,
+    talk="talkelf")
 rooms:
   castle_west:
     size: *size
@@ -157,6 +179,7 @@ rooms:
       e: EAST(room="garden_east")
       s: SOUTH(room="castle_west", x=50)
       w: WEST(room="goldegg")
+      n: NORTH(room="elf")
   garden_east:
     size: *size
     textures: [2]
@@ -175,16 +198,28 @@ rooms:
   # ------------------------------------------------
   elf:
     size: *size
+    on_start: on_start_elf
     textures: [8]
     walkareas:
       - poly: *walk_all
+        holes:
+          - [190,68,286,69,281,78,212,79]
+          - [268,88,318,88,318,102,268,102]
       - poly: [0,0,240,0,224,5,209,32,206,42,173,57,173,62,186,71,256,102,256,120,0,120]
     nodes:
       bg:
         pos: [0,0,-1]
         model: main/bg_elf
-      elf: NPC(x=70,y=10, model='elf', onRefresh='random_move', onReach='suca', walkarea=1)
 
+      water: SWIM(poly=[248,0,316,0,316,87,307,85,296,85,296,87,272,85,272,83,286,75,285,70,133,69,174,62,174,58,209,42,218,13,231,4])
+      tree1: ITEM1(x=42,y=48,model='tree_9', walk=[0,0,56,0,56,2,0,2],look=0)
+      tree2: ITEM1(x=0,y=87,model='tree_10', walk=[0,0,54,0,54,2,0,2])
+      tree3: ITEM1(x=122,y=62,model='tree_11', walk=[0,0,50,0,50,2,0,2])
+      tree4: ITEM1(x=164,y=82,model='tree_12', walk=[0,0,36,0,36,2,0,2])
+      tree5: ITEM1(x=218,y=80,model='tree_13', walk=[0,0,68,0,68,2,0,2])
+      tree6: ITEM1(x=292,y=108,model='tree_14', walk=[0,0,20,0,20,2,0,2])
+
+      s: SOUTH(room="garden_west")
   # ------------------------------------------------
   treetop:
     size: *size
