--- a/eef/assets/petscii.yaml
+++ b/eef/assets/petscii.yaml
@@ -1,5 +1,11 @@
+vars:
+  ticks: &ticks 5 
 textures:
   0: petscii.png
+  1: test.png
+
+
+
 fonts:
   c64:
     tex: 0
@@ -102,7 +108,101 @@ fonts:
       '_': [456,0,8,8,8]        # underscore
       'π': [464,0,8,8,8]        # pi sign
       '…': [296,8,8,8,8]        # ellipsis
+
+quads:
+  bg_front_000: {tex: 1, data: [0, 0, 476, 136, 0, 0]}
+  bg_front_001: {tex: 1, data: [0, 138, 484, 136, 0, 0]}
+  bg_front_002: {tex: 1, data: [0, 276, 320, 136, 0, 0]}
 sprites:
+  dave-legs:
+    tex: 0
+    ticks: *ticks
+    slots: [
+      6, 24, 12, 24, 18, 25, 18, 24, 18, 25,
+      9, 25, 5, 25, 11, 23, 9, 25, 7, 23,
+      11, 22, 7, 22, 5, 24, 9, 24
+    ]
+    data: [
+      # --- east
+      95, 103, 10, 24, 0, 0,
+      2, 102, 18, 24, 8, 0,
+      23, 102, 24, 25, 14, 0,
+      51, 103, 20, 24, 14, 0,
+      74, 102, 18, 25, 14, 0,
+      # -- south
+      108, 102, 18, 25, 9, 0,
+      2, 129, 14, 25, 5, 0,
+      18, 131, 18, 23, 11, 0,
+      38, 129, 14, 25, 9, 0,
+      54, 131, 18, 23, 7, 0,
+      81,132,18,22,11,0,
+      101,132,18,22,7,0,
+      120,130,14,24,5,0,
+      135,130,14,24,9,0
+    ]
+    animations:
+      idle-e: [0]
+      walk-e: [1, 2, 3, 4]
+      idle-s: [5]
+      walk-s: [6,7,8,9]
+      idle-n: [5]
+      walk-n: [10,11,12,13]
+
+
+
+  dave-body:
+    tex: 0
+    ticks: *ticks
+    slots: [
+    2,23,2,23,6,23,
+    9,23,11,22,11,23,
+    9,23,11,22,9,23
+    ]
+    data: [
+      # ---- east
+      46, 76, 12, 23, 8, 1,
+      3, 76, 16, 23, 12, 1,
+      22, 76, 22, 23, 16, 1,
+      # ---- south
+      106, 77, 18, 23, 9, 2,
+      60, 77, 22, 22, 11, 1,
+      84, 77, 20, 23, 11, 2,
+      # ---- north
+      125, 77, 18, 23, 9, 1,
+      69, 53, 22, 22, 11,0,
+      93, 52, 20, 23, 9, 0
+    ]
+    animations:
+      idle-e: [0]
+      walk-e: [1, 2]
+      idle-s: [3]
+      walk-s: [4,5,-2,5]
+      idle-n: [6]
+      walk-n: [7,8,-2,8]
+
+
+  dave-head:
+    tex: 0
+    ticks: *ticks
+    data: [
+      2,48,22,25,8,0,
+      27,48,18,26,9,0,
+      48,48,18,26,9,0,
+      136,48,22,25,8,0,
+      115,48,18,26,9,0]
+    animations:
+      idle-e: [0]
+      walk-e: [0]
+      idle-s: [1]
+      walk-s: [1]
+      idle-n: [2]
+      walk-n: [2]
+      talk-e: [0, 3]
+      talk-s: [1, 4]
+      talk-n: [2]
+
+
+
   cursor:
     tex: 0
     data: [
