--- a/eef/assets/strings.yaml
+++ b/eef/assets/strings.yaml
@@ -2,3 +2,18 @@ strings:
   0: 'Push'
   1: 'Pull'
   2: 'Give'
+  3: 'Open'
+  4: 'Close'
+  5: 'Read'
+  6: 'Walk to'
+  7: 'Pick up'
+  8: 'What is'
+  9: 'New Kid'
+  10: 'Unlock'
+  11: 'Use'
+  12: 'Turn on'
+  13: 'Turn off'
+  14: 'Fix'
+  20: 'Suca'
+  21: 'door mat'
+  22: "There's nothing to read on it."
