--- a/eef/assets/rooms.yaml
+++ b/eef/assets/rooms.yaml
@@ -1,21 +1,37 @@
+vars:
+  GREEN: &GREEN "#62d532"
+  YELLOW: &YELLOW "#ffff46"
+  PURPLE: &PURPLE "#aa40f5"
+  LIGHT_BLUE: &LIGHT_BLUE "#7385ff"
+
 rooms:
   front:
+    size: [1280, 136]
     walkareas:
-      - poly: [5,5,90,5,80,50]
+      - poly: [0, 0, 1280, 0, 1280, 16, 574,16, 574, 5, 544, 5, 520, 30, 520, 50, 430,50,430,30,406,5,378,5,378,16,0,16]
     textures: [0, 1]
     nodes:
       bg-000:
         pos: [0, 0, -1]
         model: main/bg_front_000
+      bg-001:
+        pos: [476, 0, -1]
+        model: main/bg_front_001
+      bg-002:
+        pos: [960, 0, -1]
+        model: main/bg_front_002
+
+
 
 
 items:
   dave:
     pos: [50, 10, 1]
     room: front
-    anim: walk-n
+    anim: idle-e
+    text_color: *LIGHT_BLUE
     #model: main/dave-body
-
+    depth: 1
     models:
       tree:
         - model: main/dave-legs
@@ -33,8 +49,54 @@ items:
         walk-s: ['walk-s', 'walk-s', 'idle-s']
         idle-n: ['idle-n', 'idle-n', 'idle-n']
         walk-n: ['walk-n', 'walk-n', 'idle-n']
-
-
+        talk-e: ['', '', 'talk-e']
+        talk-n: ['', '', 'talk-n']
+        talk-s: ['', '', 'talk-s']
+  gate:
+    pos: [1024, 8, 0]
+    room: front
+    text: 20
+    model: main/gate
+    depth: 1
+    walk:
+      poly: [0, 0, 258, 0, 258, 2, 0, 2]
+    hotspot:
+      rect: [20, 20]
+  door_mat:
+    room: front
+    pos: [432,40, 0]
+    text: 21
+    walk_to: [460, 44, 's']
+    model: main/door-mat
+    hotspot:
+      rect: [88, 8]
 state:
+  _color_verb_inactive: *GREEN
+  _color_verb_active: *YELLOW
+  _color_action: *PURPLE
+  _default_verb: walkto
+  action: null
+  object1: null
+  object2: null
+  _player_speed: 150.
   player: dave       # this marks the player item
   room: front
+
+# define the verb sets
+verbs:
+  0:
+    push: {text: 0, pos: [2, 47, 0]}
+    pull: {text: 1, pos: [2, 39, 0]}
+    give: {text: 2, pos: [2, 31, 0], obj: 2, prep: 15}
+    open: {text: 3, pos: [66, 47, 0]}
+    close: {text: 4, pos: [66, 39, 0]}
+    read: {text: 5, pos: [66, 31, 0]}
+    walkto: {text: 6, pos: [122, 47, 0]}
+    pickup: {text: 7, pos: [122, 39, 0]}
+    whatis: {text: 8, pos: [122, 31, 0]}
+    newkid: {text: 9, pos: [194, 47, 0]}
+    unlock: {text: 10, pos: [194, 39, 0]}
+    use: {text: 11, pos: [194, 31, 0]}
+    turnon: {text: 12, pos: [258, 47, 0]}
+    turnoff: {text: 13, pos: [258, 39, 0]}
+    fix': {text: 14, pos: [258, 31, 0]}
